@startuml
skinparam linetype ortho

class admin{
    + id: int
    + username: string
    + password: string
    + email: string
    + phone: string
}

class reader{
    + id: int
    + username: string
    + password: string
    + email: string
    + phone: string
    + firstname: string
    + lastname: string
    + gender: boolean
    + dateofbirth: date
    + wallet: decimal
}

class category{
    + id: int
    + name: string
    + description: string
}

class publiser{
    + id: int
    + name: string
}

class book{
    + id: int
    + name: string
    + price: decimal
    + description: string
    + publishdate: date
    + image: string
    + rate: int
    + language: string
    + printlength: int
}

class cart{
    + id: int
    + total: decimal
}

class feedback{
    + id: int
    + content: string
    + datetime: datetime
}

class order{
    + id: into
    + date: date
    + total: decimal
    + phone : string
    + address:  string
    + fullname: string
}

class orderdetails{
    + id: int
    + quantity: decimal
    + price: decimal
    + total: decimal
    + deliverydate: date
}

class author{
    + id: int
    + email: string
    + phone: string
    + fullname: string
    + gender: boolean
    + dateofbirth: date
}

class authorbook{
    + id: int
}

reader "1" -- "*" cart
cart "1" -- "*" book
reader "1" -- "*" order
category "1" -- "*" book
publiser "1" -- "*" book


(reader,book) .. feedback
(order,book) .. orderdetails
(author,book) .. authorbook

@enduml